@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Mon May 27 13:29:52 CEST 2013
-buildNumber0=1962
+#Thu May 30 18:51:18 CEST 2013
+buildNumber0=1972
